--- a/artikel2.html
+++ b/artikel2.html
@@ -23,13 +23,13 @@
     <!-- Website -->
     <title>Udah Kerja lama Ga Kaya? Mana maen, Coba gunakan Jalan sinting pelajar medan Melipat Gandakan Kekayaan dengan melihat RTP pada  mahjong ways</title>
     <meta name="description" content="Sudah kerja bertahun-tahun tapi belum kaya juga? Pelajari strategi "sinting" ala pelajar Medan untuk melipatgandakan kekayaan dengan memanfaatkan RTP dalam permainan Mahjong Ways." />
-    <meta name="keywords" content="motoslot, daftar motoslot, situs motoslot, login motoslot, Google-Berita, pg soft, mahjong ways" />
+    <meta name="keywords" content="motoslot, daftar motoslot, situs motoslot, login motoslot, google-terkini, pg soft, mahjong ways" />
     <meta name="categories" content="website" />
     <meta name="language" content="id-ID" />
     <meta name="rating" content="general" />
     <meta name="copyright" content="" />
-    <meta name="author" content="Google-Berita" />
-    <meta name="publisher" content="Google-Berita" />
+    <meta name="author" content="google-terkini" />
+    <meta name="publisher" content="google-terkini" />
     <meta name="distribution" content="global" />
     <meta name="geo.placename" content="Indonesia" />
     <meta name="geo.country" content="ID" />
@@ -43,7 +43,7 @@
     <meta property="og:url" content="https://google-terkini.github.io/Berita/artikel2.html" />
     <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghWyccl6EC55MgM0EuHnH73DJXjzZb9vl72VQCJt_4Bqu45mTJoQjiSoMsGwTFasraCPCWxJqJCUd9Os_v0rglkqn0z_Ari5IJik0aN3vQKyNsW6kZ5HMlJe9PHlhoy93IA_PycdNW1Ejkj6AmWEQ2GQZXKUT22ImUbeR4eZ1eSGjvdSZsOu0YOy71YpA/s1280/63.jpg" />
     <meta property="og:image:type" content="image/jpg" />
-    <meta property="og:site_name" content="Google-Berita" />
+    <meta property="og:site_name" content="google-terkini" />
     <meta property="og:locale" content="id_ID" />
     <meta property="og:type" content="website" />
     <!-- Twitter -->
@@ -52,8 +52,8 @@
     <meta name="twitter:description" content="Sudah kerja bertahun-tahun tapi belum kaya juga? Pelajari strategi "sinting" ala pelajar Medan untuk melipatgandakan kekayaan dengan memanfaatkan RTP dalam permainan Mahjong Ways." />
     <meta name="twitter:url" content="$url" />
     <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghWyccl6EC55MgM0EuHnH73DJXjzZb9vl72VQCJt_4Bqu45mTJoQjiSoMsGwTFasraCPCWxJqJCUd9Os_v0rglkqn0z_Ari5IJik0aN3vQKyNsW6kZ5HMlJe9PHlhoy93IA_PycdNW1Ejkj6AmWEQ2GQZXKUT22ImUbeR4eZ1eSGjvdSZsOu0YOy71YpA/s1280/63.jpg" />
-    <meta name="twitter:site" content="Google-Berita" />
-    <meta name="twitter:creator" content="Google-Berita" />
+    <meta name="twitter:site" content="google-terkini" />
+    <meta name="twitter:creator" content="google-terkini" />
     <meta name="twitter:label1" content="Estimasi waktu membaca" />
     <meta name="twitter:data1" content="9 menit" />
     <!-- Preload -->
@@ -76,7 +76,7 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "Google-Berita",
+        "name": "google-terkini",
         "alternateName": "Udah Kerja lama Ga Kaya? Mana maen, Coba gunakan Jalan sinting pelajar medan Melipat Gandakan Kekayaan dengan melihat RTP pada  mahjong ways",
         "url": "https://google-terkini.github.io/Berita/artikel2.html",
         "logo": "https://www.svgrepo.com/show/503112/turbo.svg"
@@ -94,7 +94,7 @@
         }, {
           "@type": "ListItem",
           "position": 2,
-          "name": "Google-Berita",
+          "name": "google-terkini",
           "item": "https://google-terkini.github.io/Berita/artikel2.html"
         }]
       }
@@ -112,12 +112,12 @@
     "image": ["https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghWyccl6EC55MgM0EuHnH73DJXjzZb9vl72VQCJt_4Bqu45mTJoQjiSoMsGwTFasraCPCWxJqJCUd9Os_v0rglkqn0z_Ari5IJik0aN3vQKyNsW6kZ5HMlJe9PHlhoy93IA_PycdNW1Ejkj6AmWEQ2GQZXKUT22ImUbeR4eZ1eSGjvdSZsOu0YOy71YpA/s1280/63.jpg"],
         "author": {
           "@type": "Organization",
-          "name": "Google-Berita",
+          "name": "google-terkini",
           "url": "https://google-terkini.github.io/Berita/artikel2.html"
         },
         "publisher": {
           "@type": "Organization",
-          "name": "Google-Berita",
+          "name": "google-terkini",
           "logo": {
             "@type": "ImageObject",
             "url": "https://www.svgrepo.com/show/503112/turbo.svg"
@@ -244,7 +244,7 @@
         </section>
 
     <section class='n-container m-b-normal'>
-      <div class='container' style='text-align: center;'><span>⚡  2024 <a href="https://google-terkini.github.io/Berita/artikel2.html">motoslot</a>. All Rights Reserved.</span></div>
+      <div class='container' style='text-align: center;'><span>⚡  2024 <a href="https://google-terkini.github.io/Berita/artikel2.html">google-terkini</a>. All Rights Reserved.</span></div>
     </section>
   </body>
 </html>
