--- a/artikel3.html
+++ b/artikel3.html
@@ -23,13 +23,13 @@
     <!-- Website -->
     <title>Melintasi Gerbang Olympus: Perjalanan Menyeberangi Zona Nyaman, Mengalahkan Kemiskinan, dan Menemukan Diri Sendiri Melalui Permainan kasino online</title>
     <meta name="description" content="Perjalanan menyeberangi zona nyaman, mengalahkan kemiskinan, dan menemukan diri sendiri melalui permainan slot "Gates of Olympus" />
-    <meta name="keywords" content="motoslot, daftar motoslot, situs motoslot, login motoslot, Google-Berita, pg soft, mahjong ways" />
+    <meta name="keywords" content="motoslot, daftar motoslot, situs motoslot, login motoslot, google-terkini, pg soft, mahjong ways" />
     <meta name="categories" content="website" />
     <meta name="language" content="id-ID" />
     <meta name="rating" content="general" />
     <meta name="copyright" content="" />
-    <meta name="author" content="Google-Berita" />
-    <meta name="publisher" content="Google-Berita" />
+    <meta name="author" content="google-terkini" />
+    <meta name="publisher" content="google-terkini" />
     <meta name="distribution" content="global" />
     <meta name="geo.placename" content="Indonesia" />
     <meta name="geo.country" content="ID" />
@@ -43,7 +43,7 @@
     <meta property="og:url" content="https://google-terkini.github.io/Berita/artikel3.html" />
     <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghWyccl6EC55MgM0EuHnH73DJXjzZb9vl72VQCJt_4Bqu45mTJoQjiSoMsGwTFasraCPCWxJqJCUd9Os_v0rglkqn0z_Ari5IJik0aN3vQKyNsW6kZ5HMlJe9PHlhoy93IA_PycdNW1Ejkj6AmWEQ2GQZXKUT22ImUbeR4eZ1eSGjvdSZsOu0YOy71YpA/s1280/63.jpg" />
     <meta property="og:image:type" content="image/jpg" />
-    <meta property="og:site_name" content="Google-Berita" />
+    <meta property="og:site_name" content="google-terkini" />
     <meta property="og:locale" content="id_ID" />
     <meta property="og:type" content="website" />
     <!-- Twitter -->
@@ -52,8 +52,8 @@
     <meta name="twitter:description" content="Perjalanan menyeberangi zona nyaman, mengalahkan kemiskinan, dan menemukan diri sendiri melalui permainan slot "Gates of Olympus" />
     <meta name="twitter:url" content="$url" />
     <meta name="twitter:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghWyccl6EC55MgM0EuHnH73DJXjzZb9vl72VQCJt_4Bqu45mTJoQjiSoMsGwTFasraCPCWxJqJCUd9Os_v0rglkqn0z_Ari5IJik0aN3vQKyNsW6kZ5HMlJe9PHlhoy93IA_PycdNW1Ejkj6AmWEQ2GQZXKUT22ImUbeR4eZ1eSGjvdSZsOu0YOy71YpA/s1280/63.jpg" />
-    <meta name="twitter:site" content="Google-Berita" />
-    <meta name="twitter:creator" content="Google-Berita" />
+    <meta name="twitter:site" content="google-terkini" />
+    <meta name="twitter:creator" content="google-terkini" />
     <meta name="twitter:label1" content="Estimasi waktu membaca" />
     <meta name="twitter:data1" content="9 menit" />
     <!-- Preload -->
@@ -76,7 +76,7 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "Google-Berita",
+        "name": "google-terkini",
         "alternateName": "Melintasi Gerbang Olympus: Perjalanan Menyeberangi Zona Nyaman, Mengalahkan Kemiskinan, dan Menemukan Diri Sendiri Melalui Permainan kasino online",
         "url": "https://google-terkini.github.io/Berita/artikel3.html",
         "logo": "https://www.svgrepo.com/show/503112/turbo.svg"
@@ -94,7 +94,7 @@
         }, {
           "@type": "ListItem",
           "position": 2,
-          "name": "Google-Berita",
+          "name": "google-terkini",
           "item": "https://google-terkini.github.io/Berita/artikel3.html"
         }]
       }
@@ -112,12 +112,12 @@
     "image": ["https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEghWyccl6EC55MgM0EuHnH73DJXjzZb9vl72VQCJt_4Bqu45mTJoQjiSoMsGwTFasraCPCWxJqJCUd9Os_v0rglkqn0z_Ari5IJik0aN3vQKyNsW6kZ5HMlJe9PHlhoy93IA_PycdNW1Ejkj6AmWEQ2GQZXKUT22ImUbeR4eZ1eSGjvdSZsOu0YOy71YpA/s1280/63.jpg"],
         "author": {
           "@type": "Organization",
-          "name": "Google-Berita",
+          "name": "google-terkini",
           "url": "https://google-terkini.github.io/Berita/artikel3.html"
         },
         "publisher": {
           "@type": "Organization",
-          "name": "Google-Berita",
+          "name": "google-terkini",
           "logo": {
             "@type": "ImageObject",
             "url": "https://www.svgrepo.com/show/503112/turbo.svg"
@@ -245,7 +245,7 @@
     <p>Perjalanan menuju "<em>Gates of Olympus</em>" bukan hanya tentang mencari keberuntungan, tetapi juga tentang menemukan diri sendiri dan meraih potensi penuh yang ada dalam diri kita. Dengan keberanian untuk mencoba hal baru, disiplin, dan sikap positif, kita semua memiliki kesempatan untuk mengubah nasib. Semoga kisah ini dapat memberikan inspirasi dan motivasi bagi Anda yang tengah berusaha meraih impian.</p>      
         </section>
     <section class='n-container m-b-normal'>
-      <div class='container' style='text-align: center;'><span>⚡  2024 <a href="https://google-terkini.github.io/Berita/artikel3.html">motoslot</a>. All Rights Reserved.</span></div>
+      <div class='container' style='text-align: center;'><span>⚡  2024 <a href="https://google-terkini.github.io/Berita/artikel3.html">google-terkini</a>. All Rights Reserved.</span></div>
     </section>
   </body>
 </html>
